@@ -5,7 +5,10 @@
 
 #include "procman.h"
 
+G_BEGIN_DECLS
+
 void 		create_openfiles_dialog (ProcData *procdata) G_GNUC_INTERNAL;
 
+G_END_DECLS
 
 #endif
