@@ -1,6 +1,18 @@
 2006-12-10  Benoît Dejean  <benoit@placenet.org>
 
 	* src/Makefile.am:
+	* src/disks.c:
+	* src/disks.cpp:
+	* src/disks.h:
+	* src/openfiles.c:
+	* src/openfiles.cpp:
+	* src/openfiles.h:
+
+	More C++.
+
+2006-12-10  Benoît Dejean  <benoit@placenet.org>
+
+	* src/Makefile.am:
 	* src/callbacks.c:
 	* src/callbacks.cpp:
 	* src/callbacks.h:
